--- a/designapp1/templates/admin.html
+++ b/designapp1/templates/admin.html
@@ -15,19 +15,19 @@
     <script defer src="/static/scripts/admin.js"></script>
 
     <script defer>
-    $(document).ready(function(){
-      $("#search").on("keyup", function() {
-        var value = $(this).val().toLowerCase();
-        $("#users tr").filter(function() {
-          $(this).toggle($(this).text().toLowerCase().indexOf(value) > -1)
+        $(document).ready(function () {
+            $("#search").on("keyup", function () {
+                var value = $(this).val().toLowerCase();
+                $("#users tr").filter(function () {
+                    $(this).toggle($(this).text().toLowerCase().indexOf(value) > -1)
+                });
+            });
         });
-      });
-    });
 
-    // // datatables encounters some error because of undefined
-    // $(document).ready( function () {
-    //     $("#user_table").DataTable();
-    // });
+        // // datatables encounters some error because of undefined
+        // $(document).ready( function () {
+        //     $("#user_table").DataTable();
+        // });
 
     </script>
 
@@ -51,12 +51,16 @@
                     </div>
                     <div class="row mt-4">
                         <div class="col-5">
-                            <div class="overflow-auto" style="height: 300px;">
-                                <div class="nav flex-column nav-pills" id="courses-nav" role="tablist"></div>
+                            <div class="overflow-auto border-rounded" style="height: 300px;">
+                                <div class="nav flex-column nav-pills" id="courses-nav" role="tablist">
+{#                                    <div class="spinner-border text-info"></div>#}
+                                </div>
                             </div>
                         </div>
                         <div class="col-7">
-                            <div class="tab-content" id="courses-content"></div>
+                            <div class="tab-content" id="courses-content">
+{#                                <div class="spinner-border text-info"></div>#}
+                            </div>
                         </div>
                     </div>
 
@@ -70,57 +74,16 @@
 
 
                     <div class="row">
-                        <div class="col-12">
-                            <h3 class="text-center">Users</h3>
-
-                            {#                            <div class="text-center">#}
-                            {#                                <h3>Filters</h3>#}
-                            {#                            </div>#}
-                            <!-- Search -->
-                            {#                            this should be a form#}
-                            <form class="form-horizontal form-inline" id="filter-form">
-                                <input class="form-control" type="text" placeholder="Filter by e-mail">
-                                <!-- Checkboxes -->
-                                <div class="form-check">
-                                    <input class="form-check-input" type="checkbox" value="" id="adminCheck"><br>
-                                    <label class="form-check-label small" for="adminCheck">Admins</label>
-                                </div>
-                                <div class="form-check">
-                                    <input class="form-check-input" type="checkbox" value="" id="TACheck">
-                                    <label class="form-check-label small" for="TACheck">TAs</label>
-                                </div>
-                                <div class="form-check">
-                                    <input class="form-check-input" type="checkbox" value="" id="studentCheck">
-                                    <label class="form-check-label small" for="studentCheck">Students</label>
-                                </div>
-                                <!-- Sort by -->
-                                <!-- TODO: fix double arrows -->
-                                {#                                <div class="input-group">#}
-                                {#                                    <div class="input-group-prepend">#}
-                                <select class="custom-select">
-                                    <option selected>Sort by...</option>
-                                    <option value="1">Identifier</option>
-                                    <option value="2">Role</option>
-                                    <option value="3">E-Mail</option>
-                                </select>
-                                {#                                    </div>#}
-                                {#                                    <div class="input-group-append">#}
-                                <button class="btn btn-outline-secondary" type="button">
-                                    &#8645
-                                </button>
-                                {#                                    </div>#}
-                                {#                                </div>#}
-                                <!-- Apply filters -->
-                                <button class="btn btn-info" type="submit">Apply Filters</button>
-                            </form>
-                        </div>
+                        <div class="col-12"><h3>Users</h3></div>
                         <div class="col-12">
                             <hr>
                         </div>
                         <div class="col-12">
-                            <div class="overflow-auto" style="height: 800px;">
-                                <table class="table table-sm table-hover table-fixed">
-                                    <thead class="thead dark">
+                            <input class="form-control mb-3" type="text" id="search" placeholder="Search...">
+                            <div class="overflow-auto tableFixHead" style="height: 800px;">
+                                <table id="user_table"
+                                       class="table table-sm table-hover table-fixed table-borderless table-striped">
+                                    <thead>
                                     <tr>
                                         <th class="th-sm" scope="col">#</th>
                                         <th class="th-sm" scope="col">Role</th>
@@ -128,10 +91,13 @@
                                         <th class="th-sm" scope="col">Verified</th>
                                     </tr>
                                     </thead>
-                                    <tbody id="users"></tbody>
+                                    <tbody id="users">
+{#                                    <tr class="spinner-border text-info"></tr>#}
+                                    </tbody>
                                 </table>
                             </div>
                         </div>
+
                     </div>
                 </div>
             </div>
