--- a/src/templates/edit_users.html
+++ b/src/templates/edit_users.html
@@ -76,17 +76,21 @@
                                     </div>
                                     <div class="form-group row">
                                         <label class="col-12 col-md-4 col-form-label">Role:</label>
-                                        <div class="col-12 col-md-8"><input id="role" type="text"
-                                                                            class="form-control" value=""
-                                                                            readonly=""></div>
+                                        <div class="col-12 col-md-8">
+                                            <select id="selected-role" class=custom-select">
+                                                <option value="0">Admin</option>
+                                                <option value="1">Teacher</option>
+                                                <option value="2">Student</option>
+                                            </select>
+                                        </div>
                                     </div>
                                     <label>Verified: </label>
                                     <div class="d-inline" id="verified"></div>
-                                    <button type="button" class="btn btn-info" data-toggle="modal"
+                                    <button id="edit-button" type="button" class="btn btn-info" data-toggle="modal"
                                             data-target="#editUserRoleModal">
                                         Edit Role
                                     </button>
-                                    <button id="delete_button" type="button" class="btn btn-danger">
+                                    <button id="delete-button" type="button" class="btn btn-danger">
                                         Delete User
                                     </button>
                                     {##}
@@ -128,38 +132,6 @@
                                     {#                                        <hr>#}
                                 </div>
 
-
-                                <!-- Edit User Role Modal -->
-                                <div class="modal fade" id="editUserRoleModal" tabindex="-1" role="dialog">
-                                    <div class="modal-dialog modal-dialog-centered" role="document">
-                                        <div class="modal-content">
-                                            <div class="modal-header">
-                                                <h5 class="modal-title">Edit Role</h5>
-                                                <button type="button" class="close" data-dismiss="modal"
-                                                        aria-label="Close">
-                                                    <span>&times;</span>
-                                                </button>
-                                            </div>
-                                            <div class="modal-body">
-                                                Change user role to:
-                                                <select id="selected_role" class=custom-select">
-                                                    <option value="0" selected>Admin</option>
-                                                    <option value="1">Teacher</option>
-                                                    <option value="2">Student</option>
-                                                </select>
-                                            </div>
-                                            <div class="modal-footer">
-                                                <button type="button" class="btn btn-secondary"
-                                                        data-dismiss="modal">
-                                                    Decline
-                                                </button>
-                                                <button id="change_role" type="button" class="btn btn-primary">
-                                                    Confirm
-                                                </button>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
                                 <hr/>
                                 <div class="row">
                                     <div class="col-6">
