--- a/src/templates/edit_users.html
+++ b/src/templates/edit_users.html
@@ -35,7 +35,7 @@
                                 <div class="overflow-auto tableFixHead" style="height: 300px;">
                                     <table id="user_table"
                                            class="table table-sm table-hover table-fixed table-borderless table-striped">
-                                        <thead class="bg-dark text-light">
+                                        <thead class="bg-dark text-light sticky-top">
                                         <tr>
                                             <th class="th-sm" scope="col">#</th>
                                             <th class="th-sm" scope="col">Role</th>
@@ -71,14 +71,14 @@
                                     <div class="form-group row">
                                         <div class="col-12 text-center h5">User details</div>
                                         <hr class="col-12">
-                                        <label class="col-12 col-md-4 col-form-label">Username:</label>
-                                        <div class="col-12 col-md-8"><input id="username" type="text"
+                                        <label class="col-12 col-lg-4 col-form-label">Username:</label>
+                                        <div class="col-12 col-lg-8"><input id="username" type="text"
                                                                             class="form-control" value=""
                                                                             readonly=""></div>
                                     </div>
                                     <div class="form-group row">
-                                        <label class="col-12 col-md-4 col-form-label">Role:</label>
-                                        <div class="col-12 col-md-8">
+                                        <label class="col-12 col-lg-4 col-form-label">Role:</label>
+                                        <div class="col-12 col-lg-8">
                                             <select id="selected-role" class=custom-select">
                                                 <option value="0">Admin</option>
                                                 <option value="1">Teacher</option>
@@ -86,15 +86,24 @@
                                             </select>
                                         </div>
                                     </div>
-                                    <label>Verified: </label>
-                                    <div class="d-inline" id="verified"></div>
+                                    <div class="form-group row">
+                                    <div class="col-12 col-lg-4">
+                                        <label>Verified: </label>
+                                        <div class="d-inline" id="verified"></div>
+                                    </div>
+
+                                    <div class="col-12 col-lg-4">
                                     <button id="edit-button" type="button" class="btn btn-info" data-toggle="modal"
                                             data-target="#editUserRoleModal">
                                         Edit Role
                                     </button>
+                                    </div>
+                                        <div class="col-12 col-lg-4">
                                     <button id="delete-button" type="button" class="btn btn-danger">
                                         Delete User
                                     </button>
+                                        </div>
+                                    </div>
                                     {##}
                                     {##}
                                     {#                                        <div class="mt-5 form-group row">#}
