--- a/src/templates/edit_users.html
+++ b/src/templates/edit_users.html
@@ -54,8 +54,10 @@
                     </div>
                 </div>
                 <div class="col-12 col-lg-6 mt-5 mt-lg-0 d-flex">
+
                     <div class=" center-block
     container border border-dark rounded-lg shadow-lg bg-white p-3 py-xl-5 text-center">
+                                                                                        <div id="alert-div"></div>
 
                         <div class="tab-content" id="users-tabs">
 
@@ -79,7 +81,7 @@
                                     <div class="form-group row">
                                         <label class="col-12 col-lg-4 col-form-label">Role:</label>
                                         <div class="col-12 col-lg-8">
-                                            <select id="selected-role" class=custom-select">
+                                            <select id="selected-role" class="form-control" disabled>
                                                 <option value="0">Admin</option>
                                                 <option value="1">Teacher</option>
                                                 <option value="2">Student</option>
@@ -87,21 +89,22 @@
                                         </div>
                                     </div>
                                     <div class="form-group row">
-                                    <div class="col-12 col-lg-4">
-                                        <label>Verified: </label>
-                                        <div class="d-inline" id="verified"></div>
-                                    </div>
-
-                                    <div class="col-12 col-lg-4">
-                                    <button id="edit-button" type="button" class="btn btn-info" data-toggle="modal"
-                                            data-target="#editUserRoleModal">
-                                        Edit Role
-                                    </button>
-                                    </div>
                                         <div class="col-12 col-lg-4">
-                                    <button id="delete-button" type="button" class="btn btn-danger">
-                                        Delete User
-                                    </button>
+                                            <label>Verified: </label>
+                                            <div class="d-inline" id="verified"></div>
+                                        </div>
+
+                                        <div class="col-12 col-lg-4">
+                                            <button id="edit-button" type="button" class="btn btn-secondary"
+                                                    data-toggle="modal"
+                                                    data-target="#editUserRoleModal">
+                                                Edit Role
+                                            </button>
+                                        </div>
+                                        <div class="col-12 col-lg-4">
+                                            <button id="delete-button" type="button" class="btn btn-danger">
+                                                Delete User
+                                            </button>
                                         </div>
                                     </div>
                                     {##}
@@ -163,8 +166,8 @@
 
                         </div>
                     </div>
+
                 </div>
-                <div id="alert-div"></div>
 
             </div>
 
