--- a/src/templates/edit_users.html
+++ b/src/templates/edit_users.html
@@ -102,7 +102,7 @@
                                             </button>
                                         </div>
                                         <div class="col-12 col-lg-4">
-                                            <button id="delete-button" type="button" class="btn btn-danger">
+                                            <button id="delete-button" type="button" class="mt-3 mt-lg-0 btn btn-danger">
                                                 Delete User
                                             </button>
                                         </div>
@@ -155,8 +155,8 @@
                                             </div>
                                         </div>
                                     </div>
-                                    <div class="col-6">
-                                        <div class="tab-content" id="courses-db">
+                                    <div class="col-6 px-0">
+                                        <div class="tab-content mx-1" id="courses-db">
                                             No database selected
                                             {#                                <div class="spinner-border text-info"></div>#}
                                         </div>
